<resources>
    <string name="app_name">Rionegro</string>
    <string name="demografia">Demografía</string>
    <string name="turismo">Turismo</string>
    <string name="diversion">Diversión</string>
    <string name="hospedaje">Hospedaje</string>
    <string name="inicio">Inicio</string>
    <string name="parque">Parque</string>
    <string name="puente">Puente</string>
    <string name="rionegro">Rionegro</string>
    <string name="vista">Vista Rapida</string>
    <string name="mapa">Ubicación</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
