<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.luisfelipegomezc.practicarionegro.Hospedaje">


    <TextView
        style="@style/textViewStyle"
        android:text="@string/hospedaje"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="5sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Las Lomas"
            android:textSize="20sp"
            android:gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapa"
            android:textSize="10sp"
            android:onClick="Map"
            android:id="@+id/bMap"
            android:background="#9c8050"
            android:gravity="center"/>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:src="@drawable/draw_laslomas" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="3sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="       "/>
        <ImageView
            android:layout_width="140dp"
            android:layout_height="105dp"
            android:src="@drawable/draw_santiagodearma" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapa"
            android:textSize="10sp"
            android:onClick="Map1"
            android:id="@+id/bMap1"
            android:background="#9c8050"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Sn de Arma"
            android:textSize="20sp"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="3sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="El Oasis"
            android:textSize="20sp"
            android:gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapa"
            android:textSize="10sp"
            android:onClick="Map2"
            android:id="@+id/bMap2"
            android:background="#9c8050"
            android:gravity="center"/>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="95dp"
            android:src="@drawable/draw_hoteloasis" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="5sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="           "
            android:textSize="20sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demografia"
            android:textSize="17sp"
            android:onClick="Demo"
            android:id="@+id/bDemo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     "
            android:textSize="20sp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turismo"
            android:textSize="17sp"
            android:onClick="Turi"
            android:id="@+id/bTur"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="        "
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="         "
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diversion"
            android:textSize="17sp"
            android:onClick="Div"
            android:id="@+id/bDiv"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="     "
            android:textSize="20sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio"
            android:textSize="17sp"
            android:onClick="Inic"
            android:id="@+id/bInic"/>
    </LinearLayout>
</LinearLayout>
