<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.luisfelipegomezc.practicarionegro.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentParque"
        tools:layout="@layout/fragment_parque"/>
    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentPuente"
        tools:layout="@layout/fragment_puente"/>
    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentRionegro"
        tools:layout="@layout/fragment_rionegro"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:gravity="center"/>
    <ImageView
        android:layout_width="326dp"
        android:layout_height="100dp"
        android:src="@drawable/draw_rionegro"
        android:layout_weight="0.38" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="  "/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Conoce un poco mas de este maravilloso Municipio"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textSize="20sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="       "
            android:textSize="20sp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demografia"
            android:textSize="20sp"
            android:onClick="Demo"
            android:id="@+id/bDemo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="      "
            android:textSize="20sp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turismo"
            android:textSize="20sp"
            android:onClick="Turi"
            android:id="@+id/bTur"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="        "
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="   "
            android:textSize="5sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="     "
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diversion"
            android:textSize="20sp"
            android:onClick="Div"
            android:id="@+id/bDiv"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="       "
            android:textSize="20sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hospedaje"
            android:textSize="20sp"
            android:onClick="Hosp"
            android:id="@+id/bHosp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/draw_escudo"
        android:layout_weight="0.31"
        android:layout_gravity="center_horizontal" />



</LinearLayout>
</ScrollView>